// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDetails render tests should display a copy to clipboard button when the isCopyEnabled prop is true 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="item-details"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
    data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    tabindex="0"
  >
    foo
  </h6>
  <div
    class="MuiBox-root css-16j8xl6"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1cy5wtl-MuiTypography-root"
      data-testid="item-value-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    >
      bar
    </p>
    <div
      class="MuiBox-root css-0"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1s9eyn2-MuiButtonBase-root-MuiIconButton-root"
        data-testid="item-copy-button-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
        tabindex="0"
        title="Copy foo to clipboard"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="ContentCopyIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ItemDetails render tests should render with provided title and value 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="item-details"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
    data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    tabindex="0"
  >
    foo
  </h6>
  <div
    class="MuiBox-root css-16j8xl6"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1cy5wtl-MuiTypography-root"
      data-testid="item-value-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    >
      bar
    </p>
    <div
      class="MuiBox-root css-0"
    />
  </div>
</div>
`;
